fixed the collapse button demo

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -137,4 +137,5 @@ button {
     border: 1px solid $black;
     border-radius: 4px;
     font-size: 0.66em;
+    color: $white;
 }
